# part-pick-and-place-using-ur10

./: README.md
doc/: instructions.txt
enpm809e_msgs/: CMakeLists.txt  package.xml
enpm809e_msgs/msg/: PartInfo.msg  PartInfos.msg
kitting_moveit_config/launch/: moveit.rviz
manipulation_809e/: CMakeLists.txt  package.xml  setup.py
manipulation_809e/doc/: tools.txt
manipulation_809e/nodes/: main
manipulation_809e/src/manipulation_809e/: manipulation_class.py
meta_package/: CMakeLists.txt  package.xml
navigation_809e/: CMakeLists.txt  package.xml  setup.py
navigation_809e/launch/: aruco_detector.launch  bringup.launch  start_amcl.launch  start_mapping.launch  start_movebase.launch  start_navigation.launch  start_world.launch
navigation_809e/nodes/: main
navigation_809e/param/: costmap_common_params_waffle.yaml  global_costmap_params_waffle.yaml  local_costmap_params_waffle.yaml
navigation_809e/rviz/: navigation.rviz  turtlebot3_navigation.rviz
navigation_809e/script/: install.bash
navigation_809e/src/navigation_809e/: navigation_class.py  util.py
plugins_809e/: CMakeLists.txt  package.xml
plugins_809e/include/: ROSLogicalCameraPlugin.hh
plugins_809e/include/nist_gear/: ROSVacuumGripperPlugin.hh  VacuumGripperPlugin.hh
plugins_809e/src/: ROSLogicalCameraPlugin.cc  ROSVacuumGripperPlugin.cc  VacuumGripperPlugin.cc
robots_809e/: CMakeLists.txt  package.xml
robots_809e/robot/: kitting.launch  kitting.ur10.urdf.xacro  kitting.urdf.xacro  kitting_arm_controller_ur10_custom.yaml  linear_arm_actuator.urdf.xacro  vacuum_gripper.urdf.xacro
robots_809e/robot/turtlebot3_description/urdf/: turtlebot3_waffle.gazebo.xacro
robots_809e/robot/ur_gazebo/launch/: controller_utils.launch
workcell_809e/: CMakeLists.txt  package.xml
workcell_809e/launch/: aruco.launch  turtlebot.launch  workcell.launch
workcell_809e/maps/house/: house.pgm
workcell_809e/models/box_pallets/: model.sdf
workcell_809e/models/box_pallets_2/: model.sdf
workcell_809e/models/box_pallets_3/: model.sdf
workcell_809e/models/computer_2/: model.sdf
workcell_809e/models/house2/: model.config  model.sdf
workcell_809e/models/usar/: model.config  model.sdf
workcell_809e/models/workcell_bin_place/: model.sdf
workcell_809e/param/: kitting.yaml
workcell_809e/scripts/: gazebo_unpauser.py
workcell_809e/worlds/: house2.world
