<?xml version="1.0"?>
<package format="2">
  <name>manipulation_809e</name>
  <version>0.0.0</version>
  <description>Package to manipulate the robotic arm</description>

  <maintainer email="zeidk@umd.edu">Zeid Kootbally</maintainer>

  <license>Apache 2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>trajectory_msgs</build_depend>
  <build_depend>moveit_commander</build_depend>
  <build_depend>moveit_python</build_depend> 
  <build_depend>rqt_joint_trajectory_controller</build_depend>    
  
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>moveit_commander</build_export_depend>
  <build_export_depend>rqt_joint_trajectory_controller</build_export_depend>
  <build_export_depend>moveit_python</build_export_depend> 

  <exec_depend>rospy</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>moveit_commander</exec_depend>
  <exec_depend>rqt_joint_trajectory_controller</exec_depend>
  <exec_depend>moveit_python</exec_depend>
  <exec_depend>enpm809e_msgs</exec_depend>

</package>
